# trust-electric-automation

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml  render.yaml
automations/: config.py  cron_schedule.txt  followup_sequences.py  requirements.txt
automations/templates/: followup_1hr.html  followup_24hr.html  followup_72hr.html
backend/: Dockerfile  config.py  database.py  main.py  models.py  requirements.txt  schemas.py
backend/alembic/: env.py
backend/alembic/versions/: bda7820efe58_initial_schema.py
backend/routers/: integrations.py  leads.py  stats.py
backend/services/: email.py  notification.py  sms.py  unleashed.py  xero.py
backend/services/mocks/: unleashed_mock.py  xero_mock.py
backend/services/templates/: lead_confirmation.html  owner_notification.html
dashboard/: package.json  vercel.json
dashboard/src/: index.css  main.tsx  router.tsx
dashboard/src/api/: client.ts  integrations.ts  leads.ts  stats.ts
dashboard/src/hooks/: useIntegrations.ts  useLeads.ts  useStats.ts
dashboard/src/pages/: BusinessOverview.tsx  Emails.tsx  Leads.tsx  Overview.tsx  Settings.tsx
dashboard/src/types/: lead.ts
landing-page/: package.json  vercel.json
landing-page/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
landing-page/src/components/: Calculator.tsx  CookieBanner.tsx  Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  LeadForm.tsx  Navigation.tsx  ScrollToTop.tsx  Testimonials.tsx
scripts/: dev.sh  stop.sh
shared/: package.json  types.ts
(+15 files in other folders)
